--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "time-grunt": "~0.3.1",
     "jshint-stylish": "~0.1.5",
     "grunt-chrome-manifest": "~0.2.0",
-    "grunt-contrib-compress": "~0.9.1"
+    "grunt-contrib-compress": "~0.9.1",
+    "grunt-contrib-sass": "~0.8.1"
   },
   "engines": {
     "node": ">=0.8.0"
