--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "tabrec",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "~3.2.0"
+  },
   "devDependencies": {}
 }
