Some initial options page.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -27,7 +27,6 @@
         "tabs",
         "history",
         "management",
-        "http://*/*",
-        "https://*/*"
+        "storage"
     ]
 }
