Use environment definition instead of globals whitelist.

--- a/.jshintrc
+++ b/.jshintrc
@@ -18,9 +18,8 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "jquery": true,
   "globals" : {
-    "chrome": true,
-    "$": false,
-    "jQuery": false
+    "chrome": true
   }
 }
