--- a/app/manifest.json
+++ b/app/manifest.json
@@ -16,11 +16,10 @@
     },
     "browser_action": {
         "default_icon": {
-            "19": "images/icon-19.png",
+            "19": "images/icon_active.png",
             "38": "images/icon-38.png"
         },
-        "default_title": "Tabrec",
-        "default_popup": "popup.html"
+        "default_title": "Tabrec"
     },
     "options_page": "options.html",
     "permissions": [
