--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "tabrec",
   "version": "0.0.0",
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {}
 }
