--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "default_locale": "en",
     "background": {
         "scripts": [
-            "scripts/chromereload.js",
+            "scripts/modules/notifier.js",
+            "scripts/modules/recognizer.js",
             "scripts/background.js"
         ]
     },
