--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "sweetalert": "~0.2.0"
   }
 }
