Add all needed permissions.

--- a/manifest.json
+++ b/manifest.json
@@ -25,9 +25,12 @@
     },
     "options_page": "options.html",
     "permissions": [
-        "tabs",
+        "alarms",
         "history",
-        "management",
-        "storage"
+        "identity",
+        "notifications",
+        "storage",
+        "tabCapture",
+        "tabs"
     ]
 }
