--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "background": {
         "scripts": [
             "bower_components/jquery/dist/jquery.min.js",
-            "scripts/modules/uuid.js",
+            "scripts/modules/user.js",
             "scripts/modules/connection.js",
             "scripts/modules/notifier.js",
             "scripts/modules/recognizer.js",
