--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
     "background": {
         "scripts": [
             "bower_components/jquery/dist/jquery.min.js",
+            "scripts/modules/sha1.js",
             "scripts/modules/user.js",
             "scripts/modules/connection.js",
             "scripts/modules/notifier.js",
