--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
     },
     "browser_action": {
         "default_icon": {
-            "19": "images/icon_active.png",
+            "19": "images/icon-19.png",
             "38": "images/icon-38.png"
         },
         "default_title": "Tabrec",
