--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
             "19": "images/icon-19.png",
             "38": "images/icon-38.png"
         },
-        "default_title": "Tabrec",
+        "default_title": "TabRec",
         "default_popup": "popup.html"
     },
     "options_page": "options.html",
