--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "TabRec",
-  "version": "0.0.1",
-  "homepage": "https://github.com/martin-svk/master-thesis-extension",
+  "version": "0.6.0",
+  "homepage": "https://github.com/martin-svk/tabrec",
   "authors": [
     "Martin Toma <martin.toma.svk@gmail.com>"
   ],
@@ -9,8 +9,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0",
-    "sweetalert": "~0.4.1"
+    "jquery": "~2.1.1"
   }
 }
