Use jshashes library.

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "jshashes": "~1.0.5"
   }
 }
