--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
         "scripts": [
             "bower_components/jquery/dist/jquery.min.js",
             "bower_components/jshashes/hashes.min.js",
+            "scripts/runtime.js",
             "scripts/constants.js",
             "scripts/modules/user.js",
             "scripts/modules/connection.js",
