--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
             "scripts/modules/user.js",
             "scripts/modules/connection.js",
             "scripts/modules/notifier.js",
+            "scripts/modules/executor.js",
             "scripts/modules/logger.js",
             "scripts/modules/usage_logger.js",
             "scripts/background.js"
