--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
             "scripts/modules/connection.js",
             "scripts/modules/executor.js",
             "scripts/modules/notifier.js",
-            "scripts/modules/logger.js",
+            "scripts/modules/recognizer.js",
             "scripts/modules/usage_logger.js",
             "scripts/background.js"
         ]
