Add refresh pattern to manifest,

--- a/manifest.json
+++ b/manifest.json
@@ -12,20 +12,17 @@
         "scripts": [
             "bower_components/jquery/dist/jquery.min.js",
             "bower_components/jshashes/hashes.min.js",
-
             "scripts/runtime.js",
             "scripts/constants.js",
-
             "scripts/modules/user.js",
             "scripts/modules/connection.js",
             "scripts/modules/executor.js",
             "scripts/modules/notifier.js",
-
             "scripts/modules/patterns/multi_activate_pattern.js",
             "scripts/modules/patterns/compare_pattern.js",
+            "scripts/modules/patterns/refresh_pattern.js",
             "scripts/modules/recognizer.js",
             "scripts/modules/usage_logger.js",
-
             "scripts/background.js"
         ]
     },
