--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "__MSG_appName__",
-    "version": "0.9.5",
+    "version": "0.9.6-iitsrc",
     "manifest_version": 2,
     "description": "__MSG_appDescription__",
     "icons": {
